# RapaOpenAL

./: CMakeLists.txt  README.md
include/: ROALBuffer.h  ROALCaptureDevice.h  ROALContext.h  ROALDevice.h  ROALListener.h  ROALPlaybackDevice.h  ROALRoot.h  ROALSource.h  ROALStaticSource.h  ROALStreamingSource.h
samples/: CMakeLists.txt
samples/RapaOpenALSimpleTest/: CMakeLists.txt  Main.cpp  OneToTwenty.raw  ROALTest.cpp  ROALTest.h
src/: ROALBuffer.cpp  ROALCaptureDevice.cpp  ROALContext.cpp  ROALDevice.cpp  ROALListener.cpp  ROALPlaybackDevice.cpp  ROALRoot.cpp  ROALSource.cpp  ROALStaticSource.cpp  ROALStreamingSource.cpp
