CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT( "RapaOpenALSimpleTest" )

IF( MSVC )
	INCLUDE( RapaConfigureVisualStudio )
ENDIF()
	
INCLUDE_DIRECTORIES( ${OPENAL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${RapaOpenALLib_SOURCE_DIR} )

SET	(	SOURCES
		Main.cpp
		ROALTest.h 
		ROALTest.cpp
	)

SOURCE_GROUP("" FILES ${SOURCES} )		# Avoid "Header Files" and "Source Files" virtual folders in VisualStudio

ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} RapaOpenAL )

IF( CMAKE_SYSTEM_NAME MATCHES "Windows" )
	INSTALL( TARGETS  ${PROJECT_NAME}
			 CONFIGURATIONS Debug
			 RUNTIME DESTINATION "bin/debug" 
			 LIBRARY DESTINATION "lib"
			 ARCHIVE DESTINATION "lib"	)
	INSTALL( TARGETS  ${PROJECT_NAME}
			 CONFIGURATIONS Release
			 RUNTIME DESTINATION "bin/release" 
			 LIBRARY DESTINATION "lib"
			 ARCHIVE DESTINATION "lib"	)
	INSTALL( FILES "OneToTwenty.raw" DESTINATION "bin/debug" CONFIGURATIONS Debug )
	INSTALL( FILES "OneToTwenty.raw" DESTINATION "bin/release" CONFIGURATIONS Release )
ELSE()
	INSTALL( TARGETS  ${PROJECT_NAME}
			 RUNTIME DESTINATION "bin" 
			 LIBRARY DESTINATION "lib"
			 ARCHIVE DESTINATION "lib"	)
	INSTALL( FILES "OneToTwenty.raw" DESTINATION "bin" CONFIGURATIONS Debug )
ENDIF() 
	 